tests/require_suppression_with_error_code/require_suppression_with_error_code.exp
Error ----------------------------------------------------------------------------------------------------- test.js:4:19

Cannot assign `1` to `b` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:4:19
   4| const b: string = 1; // not suppressed
                        ^ [1]

References:
   test.js:4:10
   4| const b: string = 1; // not suppressed
               ^^^^^^ [2]



Found 1 error
